--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "client-install": "cd client && npm install",
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
-    "client": "npm start --prefix ../client",
+    "client": "npm start --prefix ./client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
